; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/extr_ad525x_dpot.c_ad_dpot_remove_files.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/extr_ad525x_dpot.c_ad_dpot_remove_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@dpot_attrib_wipers = common dso_local global i32* null, align 8
@F_CMD_EEP = common dso_local global i32 0, align 4
@dpot_attrib_eeprom = common dso_local global i32* null, align 8
@F_CMD_TOL = common dso_local global i32 0, align 4
@dpot_attrib_tolerance = common dso_local global i32* null, align 8
@F_CMD_OTP = common dso_local global i32 0, align 4
@dpot_attrib_otp_en = common dso_local global i32* null, align 8
@dpot_attrib_otp = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i32, i32)* @ad_dpot_remove_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ad_dpot_remove_files(%struct.device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.device*, %struct.device** %4, align 8
  %8 = getelementptr inbounds %struct.device, %struct.device* %7, i32 0, i32 0
  %9 = load i32*, i32** @dpot_attrib_wipers, align 8
  %10 = load i32, i32* %6, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @sysfs_remove_file(i32* %8, i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* @F_CMD_EEP, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %28

19:                                               ; preds = %3
  %20 = load %struct.device*, %struct.device** %4, align 8
  %21 = getelementptr inbounds %struct.device, %struct.device* %20, i32 0, i32 0
  %22 = load i32*, i32** @dpot_attrib_eeprom, align 8
  %23 = load i32, i32* %6, align 4
  %24 = zext i32 %23 to i64
  %25 = getelementptr inbounds i32, i32* %22, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @sysfs_remove_file(i32* %21, i32 %26)
  br label %28

28:                                               ; preds = %19, %3
  %29 = load i32, i32* %5, align 4
  %30 = load i32, i32* @F_CMD_TOL, align 4
  %31 = and i32 %29, %30
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %42

33:                                               ; preds = %28
  %34 = load %struct.device*, %struct.device** %4, align 8
  %35 = getelementptr inbounds %struct.device, %struct.device* %34, i32 0, i32 0
  %36 = load i32*, i32** @dpot_attrib_tolerance, align 8
  %37 = load i32, i32* %6, align 4
  %38 = zext i32 %37 to i64
  %39 = getelementptr inbounds i32, i32* %36, i64 %38
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @sysfs_remove_file(i32* %35, i32 %40)
  br label %42

42:                                               ; preds = %33, %28
  %43 = load i32, i32* %5, align 4
  %44 = load i32, i32* @F_CMD_OTP, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %64

47:                                               ; preds = %42
  %48 = load %struct.device*, %struct.device** %4, align 8
  %49 = getelementptr inbounds %struct.device, %struct.device* %48, i32 0, i32 0
  %50 = load i32*, i32** @dpot_attrib_otp_en, align 8
  %51 = load i32, i32* %6, align 4
  %52 = zext i32 %51 to i64
  %53 = getelementptr inbounds i32, i32* %50, i64 %52
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @sysfs_remove_file(i32* %49, i32 %54)
  %56 = load %struct.device*, %struct.device** %4, align 8
  %57 = getelementptr inbounds %struct.device, %struct.device* %56, i32 0, i32 0
  %58 = load i32*, i32** @dpot_attrib_otp, align 8
  %59 = load i32, i32* %6, align 4
  %60 = zext i32 %59 to i64
  %61 = getelementptr inbounds i32, i32* %58, i64 %60
  %62 = load i32, i32* %61, align 4
  %63 = call i32 @sysfs_remove_file(i32* %57, i32 %62)
  br label %64

64:                                               ; preds = %47, %42
  ret void
}

declare dso_local i32 @sysfs_remove_file(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
